...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_main_bg">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/profile_main_bg"
        android:src="@drawable/cooking"
...
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/imageView_user"
        app:layout_constraintTop_toTopOf="@+id/imageView_user" />

    <TextView
        android:id="@+id/textView_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/textView_userName"
...
